--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -68,42 +68,81 @@
 </header>
 
 <!-- Page Content -->
-<div class="container">
+<div class="container mb-5">
+
     <div class="row">
-        <div class="col-md-8 mb-5">
+        <div class="col-12">
             <h2>Personal Info</h2>
             <hr>
-            <div class="row">
-                <div class="col-12">
-                    <form id="editform" class="ml-3" th:object="${doctor}" th:action="@{'/update/' + ${docUsername}}"  method="post">
-
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" th:field="*{name}" />
-
-
-                        <label for="medicalSpeciality">Specialty</label>
-                        <input type="text" class="form-control" id="medicalSpeciality" th:field="*{medicalSpeciality}"/>
-
-
-                    </form>
-                </div>
-
-            </div>
-            <div class="col-6">
-                <button type="submit" form="editform" class="btn btn-lg accent-orange mt-3">Submit &raquo;</button>
-            </div>
-            <div class="col-6">
-                <a th:href="@{'/delete/' + ${docUsername}}" class="btn btn-lg btn-danger mt-3">Delete &raquo;</a>
-            </div>
-
-
         </div>
-        <div class="col-md-4 mb-5">
-            <img th:src="@{/images/doctor.png}"  class="img-fluid doctor-image" alt="User Image">
-        </div>
-
-        <!-- /.row -->
     </div>
+
+    <div class="row">
+
+        <div class="col-6">
+
+            <form id="editform" class="ml-3" th:object="${patient}" th:action="@{'/update/' + ${patientUsername}}"  method="post">
+
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" th:field="*{name}" />
+
+
+
+            </form>
+        </div>
+        <div class="col-6">
+            <button type="submit" form="editform" class="btn btn-lg accent-orange mt-3">Change Name &raquo;</button>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-6">
+            <p class="mt-3 ml-3">Status of health insurance</p>
+        </div>
+        <div class="col-6">
+            <div th:if='${patient.isHealthInsured()}' class="alert alert-success" role="alert">
+                You have health insurance
+            </div>
+            <div th:unless='${patient.isHealthInsured()}' class="alert alert-danger" role="alert">
+                You don't have health insurance
+            </div>
+
+        </div>
+    </div>
+
+    <div th:if="${showChangeGP}" class="row mt-3">
+
+
+        <div  class="col-6">
+            <span class="ml-3">GP </span>
+            <span th:text="${patient.getDoctorGp().getName()}"></span>
+        </div>
+        <div class="col-6">
+            <a th:href="@{'/changeGP/' + ${patientUsername}}" class="btn btn-lg btn-warning mt-3">Change GP &raquo;</a>
+        </div>
+
+    </div>
+    <div th:unless="${showChangeGP}"  class="row">
+        <div  class="col-6">
+            <span class="ml-3">GP </span>
+            <span th:text="${patient.getDoctorGp().getName()}"></span>
+        </div>
+        <div class="col-6">
+            <div class="alert alert-warning" role="alert">
+                You have already changed your GP in the last 6 months
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <a th:href="@{'/delete/' + ${patientUsername}}" class="btn btn-lg btn-danger mt-3">Delete &raquo;</a>
+        </div>
+
+    </div>
+
+
+
     <!-- /.container -->
 </div>
 <!-- Bootstrap core JavaScript -->
