--- a/src/main/resources/templates/successfullyDeleted.html
+++ b/src/main/resources/templates/successfullyDeleted.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Doctor Dashboard</title>
+    <title>Patient Dashboard</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.css}" >
@@ -30,7 +30,7 @@
 
         <div class="col-12">
             <div class="alert alert-success" role="alert">
-                You have succesfully deleted your account!
+                You have successfully deleted your account!
             </div>
         </div>
 
