--- a/src/main/resources/templates/examination.html
+++ b/src/main/resources/templates/examination.html
@@ -12,7 +12,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Doctor Dashboard</title>
+    <title>Patient Dashboard</title>
 
     <!-- Bootstrap core CSS -->
     <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
