--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Doctor Dashboard</title>
+        <title>Patient Dashboard</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.css}" >
