--- a/src/main/resources/templates/addAppointment.html
+++ b/src/main/resources/templates/addAppointment.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="index.html">User profile <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="'/appointments/' + ${patient.getUsername()}">Appointments</a>
+                    <a class="nav-link" href="#">Appointments</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,94 +60,43 @@
     <div class="container h-100 ">
         <div class="row h-100 align-items-center ">
             <div class="col-lg-12 ">
-                <h1 class="display-4 text-white mt-5 mb-2">Your Profile</h1>
-                <p class="lead mb-5 text-white-50">Here you can find and edit all your information</p>
+                <h1 class="display-4 text-white mt-5 mb-2">Book Appointment</h1>
+                <p class="lead mb-5 text-white-50">Here you can book an appointment</p>
             </div>
         </div>
     </div>
 </header>
 
 <!-- Page Content -->
-<div class="container mb-5">
+<div class="container">
 
     <div class="row">
+
         <div class="col-12">
-            <h2>Personal Info</h2>
-            <hr>
-        </div>
-    </div>
+            <form id="makeAppointmentForm" class="ml-3" th:object="${appointmentModelAndView}" th:action="@{'/makeAppointment/' + ${username}}"  method="post">
 
-    <div class="row">
-
-        <div class="col-6">
-
-            <form id="editform" class="ml-3" th:object="${patient}" th:action="@{'/update/' + ${patientUsername}}"  method="post">
-
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" th:field="*{name}" />
-
-
+                <label >Doctor for appointment</label>
+                <select th:field="*{doctorUsername}">
+                    <option value=""> -- </option>
+                    <option th:each="doctor : ${doctors}"
+                            th:value="${doctor.username}"
+                            th:utext='${doctor.getName() +" "+ doctor.getUsername()}'/>
+                </select>
 
             </form>
-        </div>
-        <div class="col-6">
-            <button type="submit" form="editform" class="btn btn-lg accent-orange mt-3">Change Name &raquo;</button>
-        </div>
-    </div>
-
-    <div class="row mt-3">
-        <div class="col-6">
-            <p class="mt-3 ml-3">Status of health insurance</p>
-        </div>
-        <div class="col-6">
-            <div th:if='${patient.isHealthInsured()}' class="alert alert-success" role="alert">
-                You have health insurance
-            </div>
-            <div th:unless='${patient.isHealthInsured()}' class="alert alert-danger" role="alert">
-                You don't have health insurance
-            </div>
 
         </div>
-    </div>
 
-    <div th:if="${showChangeGP}" class="row mt-3">
-
-
-        <div  class="col-6">
-            <span class="ml-3">GP </span>
-            <span th:text="${patient.getDoctorGp().getName()}"></span>
-        </div>
-        <div class="col-6">
-            <a th:href="@{'/changeGP/' + ${patientUsername}}" class="btn btn-lg btn-warning mt-3">Change GP &raquo;</a>
-        </div>
-
-    </div>
-    <div th:unless="${showChangeGP}"  class="row">
-        <div  class="col-6">
-            <span class="ml-3">GP </span>
-            <span th:text="${patient.getDoctorGp().getName()}"></span>
-        </div>
-        <div class="col-6">
-            <div class="alert alert-warning" role="alert">
-                You have already changed your GP in the last 6 months
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
         <div class="col-12">
-            <a th:href="@{'/delete/' + ${patientUsername}}" class="btn btn-lg btn-danger mt-3">Delete &raquo;</a>
+            <button type="submit" form="makeAppointmentForm" class="btn btn-lg accent-orange mt-3">Make Appointment &raquo;</button>
         </div>
-
     </div>
-
-
-
-    <!-- /.container -->
 </div>
+<!-- /.container -->
+
 <!-- Bootstrap core JavaScript -->
-<script th:src="@{/vendor/jquery/jquery.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.js}"></script>
+<script th:src="@{vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
