--- a/src/main/resources/templates/seeAppointment.html
+++ b/src/main/resources/templates/seeAppointment.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="index.html">User profile <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="'/appointments/' + ${patient.getUsername()}">Appointments</a>
+                    <a class="nav-link" href="#">Appointments</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,94 +60,77 @@
     <div class="container h-100 ">
         <div class="row h-100 align-items-center ">
             <div class="col-lg-12 ">
-                <h1 class="display-4 text-white mt-5 mb-2">Your Profile</h1>
-                <p class="lead mb-5 text-white-50">Here you can find and edit all your information</p>
+                <h1 class="display-4 text-white mt-5 mb-2">Appointment</h1>
+                <p class="lead mb-5 text-white-50">Here you can see the selected appointment</p>
             </div>
         </div>
     </div>
 </header>
 
 <!-- Page Content -->
-<div class="container mb-5">
-
-    <div class="row">
-        <div class="col-12">
-            <h2>Personal Info</h2>
-            <hr>
-        </div>
-    </div>
+<div class="container">
 
     <div class="row">
 
         <div class="col-6">
 
-            <form id="editform" class="ml-3" th:object="${patient}" th:action="@{'/update/' + ${patientUsername}}"  method="post">
+            <p>Diagnosis</p>
 
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" th:field="*{name}" />
-
-
-
-            </form>
         </div>
         <div class="col-6">
-            <button type="submit" form="editform" class="btn btn-lg accent-orange mt-3">Change Name &raquo;</button>
-        </div>
-    </div>
+            <p th:text="${appointment.diagnosis}"></p>
 
-    <div class="row mt-3">
-        <div class="col-6">
-            <p class="mt-3 ml-3">Status of health insurance</p>
-        </div>
-        <div class="col-6">
-            <div th:if='${patient.isHealthInsured()}' class="alert alert-success" role="alert">
-                You have health insurance
-            </div>
-            <div th:unless='${patient.isHealthInsured()}' class="alert alert-danger" role="alert">
-                You don't have health insurance
-            </div>
-
-        </div>
-    </div>
-
-    <div th:if="${showChangeGP}" class="row mt-3">
-
-
-        <div  class="col-6">
-            <span class="ml-3">GP </span>
-            <span th:text="${patient.getDoctorGp().getName()}"></span>
-        </div>
-        <div class="col-6">
-            <a th:href="@{'/changeGP/' + ${patientUsername}}" class="btn btn-lg btn-warning mt-3">Change GP &raquo;</a>
         </div>
 
     </div>
-    <div th:unless="${showChangeGP}"  class="row">
-        <div  class="col-6">
-            <span class="ml-3">GP </span>
-            <span th:text="${patient.getDoctorGp().getName()}"></span>
+
+    <div class="row">
+
+        <div class="col-6">
+
+            <p>Medication</p>
+
         </div>
         <div class="col-6">
-            <div class="alert alert-warning" role="alert">
-                You have already changed your GP in the last 6 months
-            </div>
+            <p th:text="${appointment.medication}"></p>
+
         </div>
+
     </div>
 
+    <div class="row">
+
+        <div class="col-6">
+
+            <p>Sick leave start Date</p>
+
+        </div>
+        <div class="col-6">
+            <p th:text="${appointment.sickLeaveStartDate}"></p>
+
+        </div>
+
+    </div>
     <div class="row">
-        <div class="col-12">
-            <a th:href="@{'/delete/' + ${patientUsername}}" class="btn btn-lg btn-danger mt-3">Delete &raquo;</a>
+
+        <div class="col-6">
+
+            <p>Sick leave duration</p>
+
+        </div>
+        <div class="col-6">
+            <p th:text="${appointment.sickLeaveDays}"></p>
+
         </div>
 
     </div>
 
-
-
-    <!-- /.container -->
 </div>
+<!-- /.container -->
+
 <!-- Bootstrap core JavaScript -->
-<script th:src="@{/vendor/jquery/jquery.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.js}"></script>
+<script th:src="@{vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
