Fixed Appointment functionality

--- a/src/main/resources/templates/seeAppointment.html
+++ b/src/main/resources/templates/seeAppointment.html
@@ -124,6 +124,12 @@
         </div>
 
     </div>
+    <div class="row">
+
+        <div class="col-12">
+            <a th:href="@{'/appointments/' + ${username}}" class="btn btn-lg btn-warning mt-3">« Back</a>
+        </div>
+    </div>
 
 </div>
 <!-- /.container -->
