--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -23,37 +23,30 @@
 
     <body>
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg accent-blue fixed-top ">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img th:src="@{/images/heart-rate.png}" width="30" height="30" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">User profile <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Appointments</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Statistics
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Diagnosis</a>
-                                <a class="dropdown-item" href="#">GP</a>
-                                <a class="dropdown-item" href="#">Patients</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg accent-blue fixed-top ">
+        <div class="container">
+            <a class="navbar-brand" th:href="'/'+${username}">
+                <img th:src="@{/images/heart-rate.png}" width="30" height="30" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" th:href="'/'+${username}">User profile <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="'/appointments/' + ${username}">Appointments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="'/pastAppointments/' + ${username}">Past Appointments</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
         <!-- Header -->
         <header class="bg-primary py-5 mb-5 banner">
@@ -76,7 +69,7 @@
                         <thead>
                         <tr>
                             <th scope="col">Date</th>
-<!--                            <th scope="col">Doctor</th>-->
+                            <th scope="col">Doctor</th>
                             <th scope="col">Status</th>
                             <th scope="col">Action</th>
                         </tr>
@@ -86,20 +79,13 @@
                         <th:block th:each="appointment : ${appointments}">
                             <tr>
                                 <td th:text="${appointment.dateOfAppointment}"></td>
-<!--                                <td th:text="${appointment.doctor.name}"></td>-->
+                                <td th:text="${appointment.doctor.name}"></td>
 
                                 <td th:if='${appointment.diagnosis=="NOTSET"}'>
                                     Awaiting
                                 </td>
-                                <td th:unless='${appointment.diagnosis=="NOTSET"}'>
-                                    Done
-                                </td>
-
                                 <td th:if='${appointment.diagnosis=="NOTSET"}'>
                                     Not available
-                                </td>
-                                <td th:unless='${appointment.diagnosis=="NOTSET"}'>
-                                    <a th:href="@{'/seeappointment/' +${username}+ '/' + ${appointment.getId()}}" class="btn btn-lg btn-warning mt-3">See results &raquo;</a>
                                 </td>
                             </tr>
                         </th:block>
@@ -107,7 +93,7 @@
                         </tbody>
                     </table>
                     <div th:unless="${hasAppointments}" class="alert alert-warning" role="alert">
-                        You have no appointments
+                        You have no pending appointments
                     </div>
                 </div>
             </div>
