--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -26,7 +26,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg accent-blue fixed-top ">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" th:href="'/'+${username}">
             <img th:src="@{/images/heart-rate.png}" width="30" height="30" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,20 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">User profile <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="'/'+${username}">User profile <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="'/appointments/' + ${patient.getUsername()}">Appointments</a>
+                    <a class="nav-link" th:href="'/appointments/' + ${username}">Appointments</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Statistics
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Diagnosis</a>
-                        <a class="dropdown-item" href="#">GP</a>
-                        <a class="dropdown-item" href="#">Patients</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="'/pastAppointments/' + ${username}">Past Appointments</a>
                 </li>
             </ul>
         </div>
